@@ -35,7 +35,7 @@ max_queue_length = 1
 
 album_cover_path = /home/stefan/.cache/rhythmbox/covers/
 cache_cover_art = true
-auto_queue_genre = Comedy
+#auto_queue_genre = Comedy
 
 music_base_path = /var/lib/mpd/music/
 # If you'd like to fine-tune the individual locations of the cache data dirs
